# Black-Box-Analyzer

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/: blackbox-recording-setup.md  phase1-parser-evaluation.md  phase2-validation-gate.md  phase4-llm-benchmark.md  ui-theme.md  web-ui.md
scripts/: setup.sh
src/bbanalyzer/: __init__.py  cli.py
src/bbanalyzer/dsp/: __init__.py  _common.py  filter_analysis.py  metrics.py  noise.py  step_response.py
src/bbanalyzer/llm/: __init__.py  fallback.py  narrative.py  ollama_client.py  schema.py
src/bbanalyzer/parse/: __init__.py  backend.py  errors.py  header.py  loader.py
src/bbanalyzer/report/: __init__.py  compare_report.py  html_report.py  plots.py
src/bbanalyzer/rules/: __init__.py  catalog.py  config_checks.py  engine.py
src/bbanalyzer/tune/: __init__.py  compare.py  config_model.py  diff_parser.py  generator.py  output.py  rates_report.py  reconcile.py  whitelist.py
src/debrief/: __init__.py  cli.py  pipeline.py  theme.py
src/debrief/dsp/: __init__.py  events.py  metrics.py  noise.py  step_response.py
src/debrief/llm/: __init__.py  fallback.py  narrative.py  ollama_client.py
tests/: test_cli.py  test_cli_tune.py  test_events.py  test_filter_analysis.py  test_llm_fallback.py  test_llm_narrative.py  test_loader.py  test_metrics.py  test_noise.py  test_rates_report.py  test_report.py  test_rules.py  test_step_response.py  test_tune_compare.py  test_tune_generator.py  test_tune_misc.py  test_web.py
tools/: benchmark_llm.py  eval_parsers.py  validate_step_response.py
(+31 files in other folders)
