[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debrief"
version = "0.1.0"
description = "Local-only Betaflight blackbox log analyzer: DSP metrics, rule-based tuning diagnosis, local LLM narrative."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "jinja2>=3.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
llm = ["ollama>=0.3.0"]
web = ["flask>=3.0"]
dev = ["pytest>=8.0", "pytest-cov", "flask>=3.0"]

[project.scripts]
debrief = "debrief.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
